2004-02-11  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/seltrans-handles.cpp, src/seltrans-handles.h, src/seltrans.cpp: 
	Preserve constness of SPSelTransHandle's.

	* src/sp-item.h, src/sp-item.cpp (sp_item_set_item_transform):
	Make static.  Use NR::Matrix, and avoid NULL special case.
	Update callers.

	* src/sp-item.h, src/sp-item.cpp (sp_item_set_i2d_affine):
	Get rid of NRMatrix version.
	Calculate 1.25 directly rather than less accurate reciprocal of 0.8.

	* src/libnr/nr-matrix.h, src/libnr/nr-matrix.cpp (matrix_equalp):
	New function.
	(assert_close): Use matrix_equalp.

	* src/seltrans.h, src/seltrans.cpp (sp_sel_trans_transform):
	Get rid of non-NR::Point version.  Make affine argument const.
	Update callers.

	* src/desktop-events.cpp (sp_dt_guide_event): NR::Point'ification.

	* src/view.h (sp_view_set_position): Add NR::Point version.

	* src/desktop.h (sp_desktop_set_coordinate_status):
	Add NR::Point version.

2004-02-09  bulia byak <bulia@users.sourceforge.net>

    * doc/keys.xml doc/keys-svg.xsl: Keys and Mouse Reference: source, SVG stylesheet
 
    * icons/keys.svg: Keys SVG chart (generated, do not edit)
 
    * icons/Makefile.am: Added keys.svg
 
    * src/help.cpp src/help.h src/interface.cpp: Added Keys and Mouse command
 
    * doc/keyboard-shortcuts.txt Obsoleted, removed

    * doc/keys-html.xsl doc/keys.html: Keys reference in HTML, stylesheet for HTML

    * doc/Makefile.am: updated
 
    * src/libnr/nr-pixblock.cpp: A better fix for 859364
 
    * src/libnrtype/nr-rasterfont.cpp: Reverting my previous fix for 859364, a better
    one is in nr-pixblock.cpp

    * icons/tutorial.svg: Switched to Bitstream Vera, updated tutorial

    * src/file.cpp: Fix for save bug 891852
 
    * src/preferences-skeleton.h: transientpolicy=1 again
 
    * src/nodepath.cpp: Ctrl-Alt-drag fix in point_line_closest()
 
    * src/select-toolbar.cpp: Small space before unit selector
 